# bankoperation

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
data/: operations.json
src/: decorators.py  external_api.py  filters.py  generators.py  logger.py  main.py  masks.py  mylog.txt  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_external_api.py  test_filters.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
tests/test_data/: test_transactions.csv  test_transactions.json
